--- a/src/input.css
+++ b/src/input.css
@@ -1,21 +1,48 @@
 @import url('https://use.typekit.net/adl2rqp.css');
-@tailwind base; @tailwind components; @tailwind utilities; 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @layer base {
-    html {
-      font-size: 16px;
-    }
-    
-    @media (max-width: 1080px) {
-      html {
-        font-size: 14px;
-      }
-    }
-    @media (max-width: 768px) {
-        html {
-          font-size: 12px;
-        }
-      }
-
+  html {
+    font-size: 16px;
   }
-  
+
+  @media (max-width: 1080px) {
+    html {
+      font-size: 14px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    html {
+      font-size: 12px;
+    }
+  }
+}
+
+@layer components {
+  .carousel-slide {
+    @apply !flex flex-col items-center justify-center gap-6;
+  }
+
+  .carousel-title {
+    @apply text-orange-500 text-lg font-semibold;
+  }
+
+  .carousel-text {
+    @apply text-sm text-gray-300 max-w-xs text-center mx-auto;
+  }
+
+  .carousel-button {
+    @apply border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition-all text-white text-sm font-medium;
+  }
+
+  .custom-arrow {
+    @apply w-10 h-10 rounded-full border border-white flex items-center justify-center text-white transition duration-300;
+  }
+
+  .custom-arrow:hover {
+    @apply text-orange-500 border-orange-500;
+  }
+}
